--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<section class="container">
+  <hgroup>
+    <h2>tradition and love </h2>
+    <h3>how it’s made?</h3>
+  </hgroup>
+  <div>
+    <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+    <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
 
-</body>
-</html>
+
+      Aliquam erat volutpat. Aenean accumsan.</p>
+    <button>Read more</button>
+  </div>
+  <ul>
+    <li><p>721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
+    <li><p>16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
+    <li><p>84</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</li>
+  </ul>
+</section>
