--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./utils/colors";
 @import "./utils/size";
 @import "components/body";
+@import "components/container";
 //@import "components/header";
 @import "components/hero";
 @import "components/products";
