--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,26 +1,24 @@
 <section class="contacts-section">
   <h2 class="contacts-header">Контакты</h2>
   <article class="contacts-card">
-    <h3 class="contacts-card-header">Cafe</h3>
+    <h3>Cafe</h3>
     <ul class="contacts-list">
-      <li class="contacts-list-item">
+      <li>
         <p>Chicago</p>
         <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </li>
-      <li class="contacts-list-item">
-        <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-        <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+      <li>
+        <p>Monday - Friday 06:00 AM - 10:00 PM</p>
+        <p>Saturday - Sunday 08:00 AM - 16:00 PM</p>
       </li>
-      <li class="contacts-list-item">
-        <address class="contacts-address">
-          <ul class="contacts-address-list">
-            <li class="contacts-address-item">
-              <a href="tel:+610383766284" class="contacts-address-link"
-                >+61(0) 383 766 284</a
-              >
+      <li>
+        <address class="">
+          <ul class="">
+            <li class="">
+              <a href="tel:+610383766284" class="">+61(0) 383 766 284</a>
             </li>
-            <li class="contacts-address-item">
-              <a href="mailto:noreply@envato.com" class="contacts-address-link"
+            <li class="">
+              <a href="mailto:noreply@envato.com" class=""
                 >noreply@envato.com</a
               >
             </li>
@@ -31,26 +29,24 @@
   </article>
 
   <article class="contacts-card">
-    <h3 class="contacts-card-header">Food truck</h3>
+    <h3>Food truck</h3>
     <ul class="contacts-list">
-      <li class="contacts-list-item">
+      <li>
         <p>Los Angeles</p>
         <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </li>
-      <li class="contacts-list-item">
-        <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-        <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+      <li>
+        <p>Monday - Friday 06:00 AM - 10:00 PM</p>
+        <p>Saturday - Sunday 08:00 AM - 16:00 PM</p>
       </li>
       <li>
-        <address class="contacts-address">
-          <ul class="contacts-address-list">
-            <li class="contacts-address-item">
-              <a href="tel:+610383766284" class="contacts-address-link"
-                >+61(0) 383 766 284</a
-              >
+        <address class="">
+          <ul class="">
+            <li class="">
+              <a href="tel:+610383766284" class="">+61(0) 383 766 284</a>
             </li>
-            <li class="contacts-address-item">
-              <a href="mailto:noreply@envato.com" class="contacts-address-link"
+            <li class="">
+              <a href="mailto:noreply@envato.com" class=""
                 >noreply@envato.com</a
               >
             </li>
@@ -61,26 +57,24 @@
   </article>
 
   <article class="contacts-card">
-    <h3 class="contacts-card-header">Cafe</h3>
+    <h3>Cafe</h3>
     <ul class="contacts-list">
-      <li class="contacts-list-item">
+      <li>
         <p>Chicago</p>
         <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </li>
-      <li class="contacts-list-item">
-        <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
-        <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+      <li>
+        <p>Monday - Friday 06:00 AM - 10:00 PM</p>
+        <p>Saturday - Sunday 08:00 AM - 16:00 PM</p>
       </li>
       <li>
-        <address class="contacts-address">
-          <ul class="contacts-address-list">
-            <li class="contacts-address-item">
-              <a href="tel:+610383766284" class="contacts-address-link"
-                >+61(0) 383 766 284</a
-              >
+        <address class="">
+          <ul class="">
+            <li class="">
+              <a href="tel:+610383766284" class="">+61(0) 383 766 284</a>
             </li>
-            <li class="contacts-address-item">
-              <a href="mailto:noreply@envato.com" class="contacts-address-link"
+            <li class="">
+              <a href="mailto:noreply@envato.com" class=""
                 >noreply@envato.com</a
               >
             </li>
@@ -90,16 +84,12 @@
     </ul>
   </article>
 
-  <ul class="contacts-btn-list">
-    <li class="contacts-btn-item">
-      <a class="contacts-btn" href="#" target="_blank" rel="noopener noreferrer"
-        >Our Locations</a
-      >
+  <ul>
+    <li>
+      <a href="#" target="_blank" rel="noopener noreferrer">Our Locations</a>
     </li>
-    <li class="contacts-btn-item">
-      <a class="contacts-btn" href="#" target="_blank" rel="noopener noreferrer"
-        >Franchise</a
-      >
+    <li>
+      <a href="#" target="_blank" rel="noopener noreferrer">Franchise</a>
     </li>
   </ul>
 </section>
