--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,7 +18,7 @@
 @import 'components/body';
 @import 'components/header';
 @import 'components/hero';
-// @import 'components/products';
+@import 'components/products';
 @import 'components/him';
 @import 'components/slider';
 @import 'components/contacts';
