Добавил первичную разметку слайдера

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,4 +1,10 @@
-<section class="slider-section">
-  <div class="slider-piccollage"></div>
+<section class="slider">
+  <div class="container">
+    <picture>
+      <img src="" alt="" />
+    </picture>
+    <div></div>
+  </div>
   <div class="slider-responses"></div>
 </section>
+-
