--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './components/body';
 @import './utils/colors';
 @import './utils/size';
+@import 'components/body';
 @import 'components/header';
 @import 'components/hero';
 @import 'components/products';
