--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,6 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-
 @import './base/annul-margins-paddings';
 @import './base/annul-ul-list-style';
 @import './base/visually-hidden';
@@ -12,12 +11,14 @@
 @import './utils/colors';
 @import './utils/size';
 @import './components/body';
-@import './utils/colors';
-@import './utils/size';
 @import 'components/header';
-@import 'components/hero';
-@import 'components/products';
-@import 'components/him';
-@import 'components/slider';
-@import 'components/contacts';
-@import 'components/footer';
+@import "./utils/colors";
+@import "./utils/size";
+@import "components/body";
+@import "components/container";
+@import "components/hero";
+@import "components/products";
+@import "components/him";
+@import "components/slider";
+@import "components/contacts";
+@import "components/footer";
