--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -52,4 +52,44 @@ body {
   line-height: 1.83;
   color: #000000;
 }
+
+.footer {
+  background-color: #fff5f6;
+}
+
+.footer-head {
+  color: #d41443;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 66px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.footer-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  width: 0;
+  height: 44px;
+  border-radius: 22px;
+  border: 0;
+}
+
+.footer-button:focus, .footer-button:hover {
+  color: white;
+}
 /*# sourceMappingURL=main.css.map */
