--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,25 +13,29 @@
 </head>
 
 <body>
-    <section class="footer">
-        <ul class="footer-text">
-            <li><button type="button">Our Locations</button></li>
-            <li><button type="button">Franchise</button></li>
+    <footer class="footer">
+        <div class="container">
+        <ul class="footer-up">
+            <li><button class="footer-button" type="button">Our Locations</button></li>
+            <li><button class="footer-button" type="button">Franchise</button></li>
         </ul>
-        <ul class="footer-">
-            <li>
-                <h2>homemade ice cream made</h2>
-                <h2>with passion</h2>
+        <ul class="footer-left">
+            <li class="footer-left">
+                <h2 class="footer-head-firts">homemade ice cream made</h2>
+                <h2 class="footer-head-second">with passion</h2>
             </li>
-            <li>
-                <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+            <li class="footer-right">
+                <ul class="footer-social">
+                <li class="footer-social-list"></li>
+                <li class="footer-social-list"></li>
+                <li class="footer-social-list"></li>
                 </ul>
             </li>
+            <p class="footer-contakt">Feel free to contact</p><a href="">+61 (0) 383 766 284</a>
             </ul>
-    </section>
+            <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
+            </div>
+    </footer>
 </body>
 
 </html>
