--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,10 +1,21 @@
 <section class="slider">
   <div class="container">
-    <picture>
-      <img src="" alt="" />
-    </picture>
-    <div></div>
+    <div>
+      <picture>
+        <img src="" alt="" />
+      </picture>
+    </div>
+    <div class="slider-responses">
+      <picture>
+        <img src="" alt="" />
+      </picture>
+      <p>
+        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
+        in nibh vel risus.
+      </p>
+      <h2>Emily, Los Angeles</h2>
+    </div>
   </div>
-  <div class="slider-responses"></div>
 </section>
 -
