--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -57,15 +57,32 @@ body {
   background-color: #fff5f6;
 }
 
-.footer-head {
-  color: #d41443;
+.footer-head-first {
   font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 34px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffa5ba;
+}
+
+.footer-head-second {
+  color: #d41443;
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 58px;
   line-height: 66px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .footer-button {
@@ -83,13 +100,14 @@ body {
   font-weight: bold;
   font-size: 16px;
   line-height: 21px;
-  width: 0;
+  color: #d41443;
+  width: 200px;
   height: 44px;
   border-radius: 22px;
   border: 0;
 }
 
 .footer-button:focus, .footer-button:hover {
-  color: white;
+  background-color: #d41443;
 }
 /*# sourceMappingURL=main.css.map */
