--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,13 +15,13 @@
 <body>
     <footer class="footer">
         <div class="container">
-        <ul class="footer-up">
+<!--         <ul class="footer-up">
             <li><button class="footer-button" type="button">Our Locations</button></li>
             <li><button class="footer-button" type="button">Franchise</button></li>
-        </ul>
-        <ul class="footer-left">
+        </ul> -->
+        <ul class="footer-container">
             <li class="footer-left">
-                <h2 class="footer-head-firts">homemade ice cream made</h2>
+                <h2 class="footer-head-first">homemade ice cream made</h2>
                 <h2 class="footer-head-second">with passion</h2>
             </li>
             <li class="footer-right">
@@ -31,8 +31,8 @@
                 <li class="footer-social-list"></li>
                 </ul>
             </li>
-            <p class="footer-contakt">Feel free to contact</p><a href="">+61 (0) 383 766 284</a>
-            </ul>
+            <p class="footer-contakt">Feel free to contact</p><a href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
+        </ul>
             <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
             </div>
     </footer>
