--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,18 +1,30 @@
-@import '../utils/colors';
-
 .footer {
   background-color: #fff5f6;
 
-  &-head {
-    color: #d41443;
-
+  &-head-first {
     font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 34px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: getColor(intensive-pink);
+  }
+  &-head-second {
+    color: getColor(accent-color);
+
+    font-family: Titan One, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 58px;
     line-height: 66px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+  }
+
+  &-container {
+    display: flex;
   }
 }
 .footer-button {
