--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,7 +2,31 @@
   <div class="container">
     <div>
       <picture>
-        <img src="" alt="" />
+        <source
+          srcset="
+            ./src/images/slider/mobile/mobile-slider-piccollage.jpg    1x,
+            ./src/images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <source
+          srcset="
+            ./src/images/slider/tablet/tablet-slider-piccollange.jpg    1x,
+            ./src/images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
+          "
+          media="(max-width: 1199px)"
+        />
+        <source
+          srcset="
+            ./src/images/slider/desktop/desktop-slider-piccollange.jpg    1x,
+            ./src/images/slider/desktop/desktop-slider-piccollange@2x.jpg 2x
+          "
+          media="(min-width: 1200px)"
+        />
+        <img
+          src="./src/images/slider/mobile/mobile-slider-piccollage.jpg"
+          alt=""
+        />
       </picture>
     </div>
     <div class="slider-responses">
