--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,12 +26,30 @@
             </li>
             <li class="footer-right">
                 <ul class="footer-social">
-                <li class="footer-social-list"></li>
-                <li class="footer-social-list"></li>
-                <li class="footer-social-list"></li>
+                <li class="footer-social-container">
+                    <a href="" class="footer-social-link">
+                    <svg>
+                        <use class="footer-social-svg" href=""></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-social-container">
+                    <a href="" class="footer-social-link">
+                    <svg>
+                        <use class="footer-social-svg" href=""></use>
+                    </svg>
+                    </a>
+                    </li>
+                <li class="footer-social-container">
+                    <a href="" class="footer-social-link">
+                        <svg>
+                            <use class="footer-social-svg" href=""></use>
+                        </svg>
+                    </a>
+                </li>
                 </ul>
+            <p class="footer-contakt">Feel free to contact </p><a href="tel:+61(0)383766284"> +61 (0) 383 766 284</a>
             </li>
-            <p class="footer-contakt">Feel free to contact</p><a href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
         </ul>
             <div class="copyright"> © 2019 - IceCream. All Rights Reserved.</div>
             </div>
