--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,8 @@
 .footer {
   background-color: #fff5f6;
+  height: 250px;
+  padding-left: 115px;
+  padding-right: 115px;
 
   &-head-first {
     font-family: Titan One;
@@ -26,6 +29,21 @@
   &-container {
     display: flex;
   }
+  &-left {
+    width: calc(100% / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+  }
+  &-right {
+    width: calc(100% / 2);
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: right;
+  }
+  &-contakt {
+    padding-right: 7px;
+  }
 }
 .footer-button {
   display: flex;
@@ -50,4 +68,10 @@
     color: getColor(white);
     background-color: getColor(accent-color);
   }
+}
+
+.footer-social-svg {
+  fill: getColor(accent-color);
+  width: 34px;
+  height: 34px;
 }
