--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,37 +1,53 @@
 <section class="slider">
   <div class="container">
-    <div>
+    <picture>
+      <source
+        srcset="
+          ./images/slider/mobile/mobile-slider-piccollage.jpg    1x,
+          ./images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
+        "
+        media="(max-width: 767px)"
+      />
+      <source
+        srcset="
+          ./images/slider/tablet/tablet-slider-piccollange.jpg    1x,
+          ./images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
+        "
+        media="(max-width: 1199px)"
+      />
+      <source
+        srcset="
+          ./images/slider/desktop/desktop-slider-piccollange.jpg    1x,
+          ./images/slider/desktop/desktop-slider-piccollange@2x.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <img src="./images/slider/mobile/mobile-slider-piccollage.jpg" alt="" />
+    </picture>
+    <div class="slider-responses">
       <picture>
         <source
           srcset="
-            ./src/images/slider/mobile/mobile-slider-piccollage.jpg    1x,
-            ./src/images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
+            ./images/slider/mobile/mobile-slider-piccollage.jpg    1x,
+            ./images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
           "
           media="(max-width: 767px)"
         />
         <source
           srcset="
-            ./src/images/slider/tablet/tablet-slider-piccollange.jpg    1x,
-            ./src/images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
+            ./images/slider/tablet/tablet-slider-piccollange.jpg    1x,
+            ./images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
           "
           media="(max-width: 1199px)"
         />
         <source
           srcset="
-            ./src/images/slider/desktop/desktop-slider-piccollange.jpg    1x,
-            ./src/images/slider/desktop/desktop-slider-piccollange@2x.jpg 2x
+            ./images/slider/desktop/desktop-slider-piccollange.jpg    1x,
+            ./images/slider/desktop/desktop-slider-piccollange@2x.jpg 2x
           "
           media="(min-width: 1200px)"
         />
-        <img
-          src="./src/images/slider/mobile/mobile-slider-piccollage.jpg"
-          alt=""
-        />
-      </picture>
-    </div>
-    <div class="slider-responses">
-      <picture>
-        <img src="" alt="" />
+        <img src="./images/slider/mobile/mobile-slider-piccollage.jpg" alt="" />
       </picture>
       <p>
         Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
