--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,69 +1,70 @@
-<!-- Секция products -->
-
 <section class="products">
     <div class="container">
-<div>
-    <p>100% natural</p>
-    <h1>products</h1>
-</div>
-<ul>
-    <li>
         <div>
-            <img src="">
+            <p>100% natural</p>
+            <h1>products</h1>
         </div>
-        <div>
-            <h2>ice cream</h2>
-            <svg width="26" height="6">
-                <use href="">
-                </use>
-            </svg>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <a href="">
-            <svg width="40" height="40">
-                <use href="">
-                </use>
-            </svg>
-        </a>
-    </div>
-    </li>
-    <li>
-        <div>
-            <img src="">
-        </div>
-        <div>
-            <h2>ice coffee</h2>
-            <svg width="26" height="6">
-                <use href="">
-                </use>
-            </svg>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <a href="">
-                <svg width="40" height="40">
-                    <use href="">
-                    </use>
-                </svg>
-            </a>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="">
-        </div>
-        <div>
-            <h2>milkshakes</h2>
-            <svg width="26" height="6">
-                <use href="">
-                </use>
-            </svg>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            <a href="">
-                <svg width="40" height="40">
-                    <use href="">
-                    </use>
-                </svg>
-            </a>
-        </div>
-    </li>
-</ul>
+        <ul>
+            <li>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <h2>ice cream</h2>
+                    <svg width="26" height="6">
+                        <use href="">
+                        </use>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
+                    <a href="">
+                        <svg width="40" height="40">
+                            <use href="">
+                            </use>
+                        </svg>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <h2>ice coffee</h2>
+                    <svg width="26" height="6">
+                        <use href="">
+                        </use>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
+                    <a href="">
+                        <svg width="40" height="40">
+                            <use href="">
+                            </use>
+                        </svg>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <h2>milkshakes</h2>
+                    <svg width="26" height="6">
+                        <use href="">
+                        </use>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
+                    <a href="">
+                        <svg width="40" height="40">
+                            <use href="">
+                            </use>
+                        </svg>
+                    </a>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
