Стилизировал текст меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container header">
     <nav class="header-nav">
-      <a class="header-logo" href=""></a>
+      <a class="header-logo" href="index.html"></a>
       <div class="header-menu-container">
         <button class="header-close-btn" type="button">
         </button>
@@ -9,11 +9,11 @@
 
         </button>
         <ul class="header-menu">
-          <li class="item"><a href="">Home</a></li>
-          <li class="item"><a href="">About us</a></li>
-          <li class="item"><a href="">How it’s made?</a></li>
-          <li class="item"><a href="">Our products</a></li>
-          <li class="item"><a href="">Contact</a></li>
+          <li class="item"><a class="header-menu-link" href="index.html">Home</a></li>
+          <li class="item"><a class="header-menu-link" href="">About us</a></li>
+          <li class="item"><a class="header-menu-link" href="">How it’s made?</a></li>
+          <li class="item"><a class="header-menu-link" href="">Our products</a></li>
+          <li class="item"><a class="header-menu-link" href="">Contact</a></li>
         </ul>
       </div>
     </nav>
