Изменены базовые стили

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -5,12 +5,14 @@
 
   @include size(mobile) {
     width: 480px;
+    padding-left:10px;
+    padding-right: 10px;
   }
-  @include size(tablet){
-    width: 768px;
-}
+
   @include size(desktop) {
     width: 1200px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 }
