--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,19 +5,18 @@
 
 // Стили для файла с примером HTML-фрагмента
 
-@import './base/annul-margins-paddings';
-@import './base/annul-ul-list-style';
-@import './base/visually-hidden';
-@import './base/image-display-block';
-@import './utils/colors';
-@import './utils/size';
-@import './components/body';
-@import './utils/colors';
-@import './utils/size';
+@import 'base/annul-margins-paddings';
+@import 'base/annul-ul-list-style';
+@import 'base/visually-hidden';
+@import 'base/image';
+@import 'utils/colors';
+@import 'utils/size';
+@import "components/container";
+@import 'components/body';
 @import 'components/header';
-@import 'components/hero';
-@import 'components/products';
-@import 'components/him';
-@import 'components/slider';
-@import 'components/contacts';
-@import 'components/footer';
+@import "components/hero";
+@import "components/products";
+@import "components/him";
+@import "components/slider";
+@import "components/contacts";
+@import "components/footer";
