добавлено обнуление ссылки

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,8 @@
 @import 'base/annul-ul-list-style';
 @import 'base/visually-hidden';
 @import 'base/image';
+@import 'base/link';
+@import 'components/address';
 @import 'utils/colors';
 @import 'utils/size';
 @import "components/container";
