--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -42,10 +42,15 @@
     background-color: #e17992;
     text-align: center;
     padding: 60px 0px;
+    filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
   }
 
   @include size(desktop) {
+    // position: static;
     display: flex;
+    // width: 100%;
+    // background-color: rgba($color: #000000, $alpha: 0);
+    // padding: 0px;
   }
 }
 .header-menu-container.is-open {
