--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,12 +3,12 @@
     <nav class="header-nav">
       <a class="header-logo" href="index.html"></a>
       <div class="header-menu-container">
-        <button class="header-close-btn" type="button">
+        <button class="header-close-btn" type="button" data-menu-button>
         </button>
         <button class="header-order-btn_menu" type="button">Buy now
 
         </button>
-        <ul class="header-menu">
+        <ul class="header-menu" data-menu>
           <li class="item"><a class="header-menu-link" href="index.html">Home</a></li>
           <li class="item"><a class="header-menu-link" href="">About us</a></li>
           <li class="item"><a class="header-menu-link" href="">How it’s made?</a></li>
@@ -18,7 +18,7 @@
       </div>
     </nav>
     <ul class="header-btn-container">
-      <li class="item"><button class="header-burger" type="button">
+      <li class="item"><button class="header-burger" type="button" data-menu-button>
 
         </button></li>
       <li class="item">
