--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,14 +2,14 @@
   <div class="container">
     <picture>
       <source
-        media="(max-width: 767px)"
+        media="(min-width: 767px)"
         srcset="
           ./images/slider/mobile/mobile-slider-piccollage.jpg    1x,
           ./images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
         "
       />
       <source
-        media="(max-width: 1199px)"
+        media="(min-width: 768px)"
         srcset="
           ./images/slider/tablet/tablet-slider-piccollange.jpg    1x,
           ./images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
