--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,4 +1,8 @@
 .contacts-card {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+
   padding-top: 43px;
   padding-bottom: 43px;
   padding-right: 20px;
@@ -11,9 +15,11 @@
 }
 
 .contacts-card-header {
-  display: block;
-  width: 80px;
-  height: 16px;
+  display: inline-block;
+  // width: 80px;
+  line-height: 1.86;
+  padding-left: 40px;
+  padding-right: 40px;
 
   background: getColor('brown');
   border-radius: 4px;
