--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,4 +1,8 @@
 .contacts-card {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+
   padding-top: 43px;
   padding-bottom: 43px;
   padding-right: 20px;
@@ -11,10 +15,14 @@
 }
 
 .contacts-card-header {
-  display: block;
-  width: 80px;
-  height: 16px;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1.86;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-bottom: 25px;
 
+  text-transform: uppercase;
   background: getColor('brown');
   border-radius: 4px;
   color: getColor('white');
