раметка hero и стили

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,29 @@
-<section class="hero-section container">
-    
-    <div class="hero-text-box">
-        <h1 class="hero-text">ice cream made with
-            <span class="hero-text-accent">passion</span>
-        </h1>
-        <button type="button" class="hero-button">Products</button>
-        <button type="button" class="hero-button hero-button-white">How it’s made?</button>
+<section class="hero-section">
+    <div class="hero-container container">
+        <div class="hero-text-box">
+            <h1 class="hero-text">ice cream made with
+                <span class="hero-text-accent">passion</span>
+            </h1>
+            <a class="hero-button" href="">Products</a>
+            <a class="hero-button hero-button-white" href="">How it’s made?</a>
+        </div>
+
+        <div class="hero-made-box">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            </p>
+            <a class="hero-svg" href="">button svg</a>
+        </div>
+        <div class="hero-info">
+            <ul>
+                <li class="hero-info-box">
+                    <span class="hero-info-number">16</span>
+                    <span class="hero-info-text">cafes</span>
+                </li>
+                <li class="hero-info-box">
+                    <span class="hero-info-number">32</span>
+                    <span class="hero-info-text">food trucks</span>
+                </li>
+            </ul>
+        </div>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-    <a href="">button svg</a>
 </section>
