--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,23 +27,26 @@
             <li class="footer-right">
                 <ul class="footer-social">
                 <li class="footer-social-container">
-                    <a href="" class="footer-social-link">
-                    <svg>
-                        <use class="footer-social-svg" href=""></use>
+                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="Instagram" class="footer-social-link">
+                    <svg class="footer-social-svg">
+                        <use href="../src/images/symbol-defs.svg#github"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="footer-social-container">
-                    <a href="" class="footer-social-link">
-                    <svg>
-                        <use class="footer-social-svg" href=""></use>
+                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="Instagram" class="footer-social-link">
+                    <svg class="footer-social-svg">
+                        <use href="../src/images/symbol-defs.svg#Group"></use>
                     </svg>
                     </a>
                     </li>
                 <li class="footer-social-container">
-                    <a href="" class="footer-social-link">
-                        <svg>
-                            <use class="footer-social-svg" href=""></use>
+                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferer"
+                    aria-label="Instagram" class="footer-social-link">
+                        <svg class="footer-social-svg">
+                            <use href="../src/images/symbol-defs.svg#telegram"></use>
                         </svg>
                     </a>
                 </li>
