Добавлены оставшиеся элементы слайдера

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,14 +2,14 @@
   <div class="container">
     <picture>
       <source
-        media="(min-width: 767px)"
+        media="(max-width: 767px)"
         srcset="
           ./images/slider/mobile/mobile-slider-piccollage.jpg    1x,
           ./images/slider/mobile/mobile-slider-piccollage@2x.jpg 2x
         "
       />
       <source
-        media="(min-width: 768px)"
+        media="(max-width: 1199px)"
         srcset="
           ./images/slider/tablet/tablet-slider-piccollange.jpg    1x,
           ./images/slider/tablet/tablet-slider-piccollange@2x.jpg 2x
@@ -41,6 +41,9 @@
               src="./images/slider/mobile/slider-comment-pic-1.jpg"
               alt="Emily, Los Angeles"
             />
+            <!-- <svg>
+              <use></use>
+            </svg> -->
             <p class="slider__content_text">
               Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
               Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
@@ -115,25 +118,16 @@
           </div>
         </div>
       </div>
+      <a
+        class="slider__control slider__control_left"
+        href="#"
+        role="button"
+      ></a>
+      <a
+        class="slider__control slider__control_right"
+        href="#"
+        role="button"
+      ></a>
     </div>
-    <!-- <a class="slider__control slider__control_left" href="#" role="button"></a>
-    <a class="slider__control slider__control_right" href="#" role="button"></a> -->
-    <ol class="slider__indicators">
-      <li class="active" data-slide-to="0">
-        <svg width="12" height="12">
-          <use></use>
-        </svg>
-      </li>
-      <li class="" data-slide-to="1">
-        <svg width="12" height="12">
-          <use></use>
-        </svg>
-      </li>
-      <li class="" data-slide-to="2">
-        <svg width="12" height="12">
-          <use></use>
-        </svg>
-      </li>
-    </ol>
   </div>
 </section>
